refactored for futures

--- a/www/index.html
+++ b/www/index.html
@@ -229,7 +229,7 @@
 					<td><div id="memberUI">
 						<div style="float:left;width:30%;">
 							<h4>Your subscriptions</h4>
-							<div style="width:95%;border:2px solid black;paddin:2em 1em 2em 1em">
+							<div style="width:95%;border:2px solid black;padding:2em 1em 2em 1em">
 								<ul id="subscription_list" style="padding-right:1em"></ul>
 							</div>
 							<br />
@@ -253,6 +253,6 @@
 				</tr>
 			</table>
 		</div>
-			<div style="text-align:center;padding-top:1em"><h6>server address: <input type="text" id="serverAddress" value="http://172.22.2.28:9999"></h6></div>
+			<div style="text-align:center;padding-top:1em"><h6>server address: <input type="text" id="serverAddress" value="http://localhost:9999"></h6></div>
 	</body>
 </html>
