added self-subscription on sign-up

--- a/www/index.html
+++ b/www/index.html
@@ -229,7 +229,7 @@
 					<td><div id="memberUI">
 						<div style="float:left;width:30%;">
 							<h4>Your subscriptions</h4>
-							<div style="width:95%;border:2px solid black;padding:2em 1em 2em 1em">
+							<div style="width:95%;border:2px solid black">
 								<ul id="subscription_list" style="padding-right:1em"></ul>
 							</div>
 							<br />
